--- a/Rooftiles.ipynb
+++ b/Rooftiles.ipynb
@@ -113,7 +113,7 @@
     "\n",
     "* Betonnen sneldekker (monier)\n",
     "* VH (Verbeterde Holle) \n",
-    "* OHV (opnieuw verbeterde holle)\n",
+    "* OVH (opnieuw verbeterde holle)\n",
     "* Tuile du Nord\n"
    ]
   },
@@ -151,12 +151,38 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f6bb1334-b38d-45e7-a0a3-4ddb10729f9f",
+   "cell_type": "markdown",
+   "id": "1e0aed9e-b79d-4986-9ebe-c9e1667bb211",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "For the verbeterde holle i will use \"verbeterde holle dakpan\",\n",
+    "the opnieuw verbeterde holle will be \"\"opnieuw verbeterde\" holle dakpan\"\n",
+    "and finally the tuile du nord is \"tuile du nord dakpan\".\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "46f1a1d4-d1f0-4235-816d-b006fed20d49",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "verbeterde holle dakpan\n",
+      " \"opnieuw verbeterde\" holle dakpan\n",
+      "tuile du nord dakpan\n"
+     ]
+    }
+   ],
+   "source": [
+    "vh = 'verbeterde holle dakpan'\n",
+    "ovh = '\\\"opnieuw verbeterde\\\" holle dakpan'\n",
+    "tuile = 'tuile du nord dakpan'\n",
+    "\n",
+    "print(vh + \"\\n\", ovh + \"\\n\" + tuile)"
+   ]
   }
  ],
  "metadata": {
