--- a/Rooftiles.ipynb
+++ b/Rooftiles.ipynb
@@ -183,6 +183,22 @@
     "\n",
     "print(vh + \"\\n\", ovh + \"\\n\" + tuile)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d479d6df-3f6f-432b-b33f-f04db570789e",
+   "metadata": {},
+   "source": [
+    "## Downloading training images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e0cd5608-f8f3-4be4-a0ca-5f80c0589cff",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
